Fix wrap-guide not showing

--- a/styles/base.less
+++ b/styles/base.less
@@ -89,7 +89,6 @@ atom-text-editor .wrap-guide {
   border-right: none;
   border-left: 1px solid hsl(264, 24%, 22%);
   box-shadow: none;
-  z-index: 0;
 }
 
 
